--- a/body.html
+++ b/body.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-12">
       <div class="card-body border-5 border-dark" style="background-color:rgb(240, 240, 240); border-radius: 5%; " >
-      <input id="display" class="mb-3" disabled="on" value="">
+      <textarea id="display" class="mb-3" disabled="on" value=""></textarea>
   
       <table>
         <tr>
